# egui_lens

./: Cargo.toml  LICENSE  README.md
crates/egui_lens/: Cargo.toml
crates/egui_lens/src/: logger.rs  payload.rs
examples/basic_custom/: Cargo.toml
examples/basic_custom/src/: main.rs
examples/basic_custom/src/platform/: banner.rs  mod.rs
examples/diskforge/: Cargo.toml
examples/diskforge/src/: logging_macros.rs  main.rs
examples/diskforge/src/logger/: colors.rs  event_logger.rs  example_custom_logs.rs  mod.rs
examples/diskforge/src/payloads/: composable.rs  mod.rs
examples/diskforge/src/platform/: config_operations.rs  details.rs  mod.rs  parameters.rs
examples/diskforge/src/ui/: about_panel.rs  control_panel.rs  mod.rs  reactive_event_logger.rs  sd_panel.rs  settings_panel.rs  taffy_panel.rs
