[workspace]
resolver = "2"
members = [
    "crates/egui_lens",
    "examples/diskforge",
    "examples/basic_custom",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_dock = "0.16.0"
egui_extras = { version = "0.31.1", features = ["image"] }
egui_mobius_reactive = {version = "0.3.0-alpha.31"}
egui_mobius = "0.3.0-alpha.31"
egui_mobius_widgets = "0.3.0-alpha.31"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
once_cell = "1.19"
egui_taffy = "0.7.0"
dirs = "5.0"
tokio = {version = "1.44.1", features = ["full"]}
env_logger = "0.11.7"
log = "0.4.27"
egui_plot = "0.31.0"
ndarray = "0.16.1"
sysinfo = "0.34.2"
local-ip-address = "0.6.4"
rfd = "0.14"

